feat: expand operations, rates, and financial configuration domains